# oop2-lab3

./: main.cpp
task1/: main.cpp
task2/: CMakeLists.txt  main.cpp
